# ghc2f

./: .gitignore  README.md  optimizer_hyper.py  pyproject.toml  run.sh  run_ae.py  run_ae_bpr.py  run_gated_ae.py  test.ipynb
model/: aspectgh2f.py  autoencoder.py  cross_attention.py  gated_ae.py  ghc2f.py
results/: ablation.ipynb  analise.ipynb  analise_tabela.ipynb  analysis.ipynb  results.csv  results_autoencoder.csv  tabela_final.csv
utils/: ae_utils.py  aspect_dataset.py  bpr_utils.py  dataset_utils.py  leave_one_out_cv.py  topic_att_profile.py  train_model.py  train_models.py  utils.py
