[project]
name = "ghc2f"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "moocore>=0.2.0",
    "numpy>=2.2.6",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pymoo>=0.6.1.6",
    "scikit-learn>=1.7.2",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.15.3",
    "scipy-stubs~=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
